Bug 241967 - Ark crashes when I attempt to open the linked jar
Summary: Ark crashes when I attempt to open the linked jar
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-17 10:59 UTC by Iñaki Ibarrola Atxa
Modified: 2010-06-20 06:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Iñaki Ibarrola Atxa 2010-06-17 10:59:09 UTC
Application: ark (2.14)
KDE Platform Version: 4.4.4 (KDE 4.4.4)
Qt Version: 4.6.3
Operating System: Linux 2.6.32-22-generic i686
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
The attached jar is the Hibernate jar used by Glassfish

The crash can be reproduced every time.

 -- Backtrace:
Application: Ark (ark), signal: Segmentation fault
[KCrash Handler]
#6  QBasicAtomicInt::ref (this=0x82b26e0, receivedEntry=..., behaviour=ArchiveModel::DoNotNotifyViews) at /usr/include/qt4/QtCore/qatomic_i386.h:120
#7  QString (this=0x82b26e0, receivedEntry=..., behaviour=ArchiveModel::DoNotNotifyViews) at /usr/include/qt4/QtCore/qstring.h:715
#8  ArchiveModel::newEntry (this=0x82b26e0, receivedEntry=..., behaviour=ArchiveModel::DoNotNotifyViews) at ../../../ark/part/archivemodel.cpp:751
#9  0x01c19ca3 in ArchiveModel::slotLoadingFinished (this=0x82b26e0, job=0x83553c0) at ../../../ark/part/archivemodel.cpp:769
#10 0x01c19f07 in ArchiveModel::qt_metacall (this=0x82b26e0, _c=QMetaObject::InvokeMetaMethod, _id=32, _a=0xb5601b80) at ./archivemodel.moc:103
#11 0x056e347a in QMetaObject::metacall (object=0x82b26e0, cl=3215234860, idx=32, argv=0xb5601b80) at kernel/qmetaobject.cpp:237
#12 0x056edb46 in QMetaCallEvent::placeMetaCall (this=0xb5601de0, object=0x82b26e0) at kernel/qobject.cpp:561
#13 0x056eec0e in QObject::event (this=0x82b26e0, e=0xb5601de0) at kernel/qobject.cpp:1248
#14 0x01091e8c in QApplicationPrivate::notify_helper (this=0x81379f8, receiver=0x82b26e0, e=0xb5601de0) at kernel/qapplication.cpp:4302
#15 0x01098a0e in QApplication::notify (this=0xbfa4a0fc, receiver=0x82b26e0, e=0xb5601de0) at kernel/qapplication.cpp:3706
#16 0x009a0ffa in KApplication::notify (this=0xbfa4a0fc, receiver=0x82b26e0, event=0xb5601de0) at ../../kdeui/kernel/kapplication.cpp:302
#17 0x056de13b in QCoreApplication::notifyInternal (this=0xbfa4a0fc, receiver=0x82b26e0, event=0xb5601de0) at kernel/qcoreapplication.cpp:726
#18 0x056e1bfc in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x8121fc8) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8121fc8) at kernel/qcoreapplication.cpp:1367
#20 0x056e1d7d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1260
#21 0x0570a33f in QCoreApplication::sendPostedEvents (s=0x8139d10) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#22 postEventSourceDispatch (s=0x8139d10) at kernel/qeventdispatcher_glib.cpp:276
#23 0x04c985e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#24 0x04c9c2d8 in ?? () from /lib/libglib-2.0.so.0
#25 0x04c9c4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#26 0x05709e35 in QEventDispatcherGlib::processEvents (this=0x8121b60, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#27 0x01151e15 in QGuiEventDispatcherGlib::processEvents (this=0x8121b60, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#28 0x056dc759 in QEventLoop::processEvents (this=0xbfa4a054, flags=) at kernel/qeventloop.cpp:149
#29 0x056dcbaa in QEventLoop::exec (this=0xbfa4a054, flags=...) at kernel/qeventloop.cpp:201
#30 0x056e1e3f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#31 0x01091f27 in QApplication::exec () at kernel/qapplication.cpp:3581
#32 0x08050499 in main (argc=4, argv=0xbfa4a494) at ../../../ark/app/main.cpp:210

Reported using DrKonqi
Comment 1 Iñaki Ibarrola Atxa 2010-06-17 11:10:03 UTC
The jar is too big to be attached, I copied it here:

http://burdinola.aiaraldea.com/files/hibernate3.jar
Comment 2 Raphael Kubo da Costa 2010-06-20 06:21:16 UTC
SVN commit 1140184 by rkcosta:

Ignore entries called "/".

'/' is the path separator, so the entry will ultimately become an empty
QStringList and crash things.

BUG: 241967

 M  +4 -2      archivemodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140184
Comment 3 Raphael Kubo da Costa 2010-06-20 06:23:36 UTC
SVN commit 1140185 by rkcosta:

Backport r1140184.

Ignore entries called "/".

'/' is the path separator, so the entry will ultimately become an empty
QStringList and crash things.

CCBUG: 241967
FIXED-IN: 4.4.5


 M  +4 -2      archivemodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140185