Ignore entries called "/".

'/' is the path separator, so the entry will ultimately become an empty
QStringList and crash things.

BUG: 241967

svn path=/trunk/KDE/kdeutils/ark/; revision=1140184